tests/sksl/errors/RedeclareBasicType.glsl
### Compilation failed:

error: 1: expected an identifier, but found type 'int'
float int;
      ^^^
1 error
